# Megakernels

./: .envrc.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  run.sh
demos/cross-gpu-llama/: Makefile  all_device_barrier.cu  attention_decode.cu  attention_prefill.cu  batched_rms_norm.cu  gate_silu.cu  inc_barriers.cu  llama.cu  llama.cuh  lm_head.cu  matmul_adds.cu  matmul_pipeline.cuh  pch.cuh  pch.cuh.gch  qkv_rope_append.cu  up_matmul.cu
demos/linear-training/: Makefile  conf.cuh  linear_training.cu  run_linear_training.py  run_linear_training.sh
demos/low-latency-llama/: Makefile  NOTES.md  attention_partial.cu  attention_reduction.cu  llama.cu  llama.cuh  matvec_adds.cu  matvec_pipeline.cuh  rms_lm_head.cu  rms_matvec_rope_append.cu  upgate.cu
demos/workstealing_example/: Makefile  error.txt  test_workstealing.py  workstealing.cu
docs/: spinup.md  tp_llama.md
include/: config.cuh  consumer.cuh  launcher.cuh  loader.cuh  megakernel.cuh  noop.cuh  storer.cuh  util.cuh
include/common/: base_types.cuh
include/controller/: controller.cuh  instruction_fetch.cuh  timings_store.cuh
linear_training_mk_demo/: .gitignore  README.md  main.py  pyproject.toml  run.py  setup.py
linear_training_mk_demo/benchmarks/: benchmark.py
linear_training_mk_demo/docs/: PERF.md
linear_training_mk_demo/src/: config.cuh  linear_training_mk_demo.cu  linear_training_mk_demo_template_example.cu
linear_training_mk_demo/tests/: test_example.py
megakernels/: dispatch.py  generators.py  instructions.py  llama.py  scheduler.py  timings.py  utils.py
(+48 files in other folders)
